--- a/views/overview/overview.handlebars
+++ b/views/overview/overview.handlebars
@@ -3,3 +3,6 @@
   {{> overview/overview_c_it2}} 
   {{> overview/overview_c_it3}}
 </div>
+{{!-- Scripts start here --}}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+  <script src="/js/dist/script.js"></script>
