--- a/views/priceList/price_list.handlebars
+++ b/views/priceList/price_list.handlebars
@@ -10,14 +10,7 @@
       </div>
       <div class="addParamFields row"></div>
 
-      <div class="form-group col-md-12">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="applySlaTop">
-          <label class="form-check-label" for="applySlaTop">SLA Top</label>
-          <label for="slaTopFee">Sla Top Add Fee</label>
-          <input type="text" class="form-control" name="slaTopFee">
-        </div>
-      </div>
+      
       {{!-- Small Discount --}}
       <div class="form-group  col-md-4">
         <label for="smallMin">Discount Small Min</label>
@@ -79,3 +72,6 @@
     </div>
   </div>
 </div>
+{{!-- Scripts start here --}}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+  <script src="/js/dist/script2.js"></script>
