--- a/views/overview/overview.handlebars
+++ b/views/overview/overview.handlebars
@@ -1,8 +1,8 @@
 <div class="overview">
-  {{> overview/overview_c_it1}} 
-  {{> overview/overview_c_it2}} 
-  {{> overview/overview_c_it3}}
+    {{> overview/overview_c_it1}} 
+    {{> overview/overview_c_it2}} 
+    {{> overview/overview_c_it3}}
 </div>
 {{!-- Scripts start here --}}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-  <script src="/js/dist/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+<script src="/js/dist/home.js"></script>
