--- a/public/styles/postcss/modules/clients.css
+++ b/public/styles/postcss/modules/clients.css
@@ -1,36 +1,41 @@
 .clients {
-  width: 100%;
+  margin: 2rem;
   display: grid;
-  grid-template-areas:
-  "content1 content2 content3"
-  "content4 content5 content6";
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: minmax(100px, 200px);
-  grid-gap: 5px;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(100px, 250px));
+  grid-gap: 15px;
+
   &__it1 {
-    grid-area: content1;
-    width: 100%;
-    height: 100%;
     display: grid;
-    >p {
-      align-self: center;
-      justify-self: center;
-      font-size: 3rem;
+    align-items: center;
+    justify-items: center;
+    box-shadow: $card-shadow;
+    &__content {
+      text-align: center;
     }
   }
 
   &__it2 {
-    grid-area: content2;
-    width: 100%;
-    height: 100%;
     display: grid;
     align-items: center;
     justify-items: center;
+    box-shadow: $card-shadow;
+    &__content {
+      text-align: center;
+    }
   }
 
   &__it3 {
-    grid-area: content3;
     display:grid;
     grid-auto-flow: row;
+    box-shadow: $card-shadow;
+    &__content {
+      padding: 15px;
+    }
+  }
+
+  &__it4 {
+    box-shadow: $card-shadow;
+
   }
 }
