--- a/public/styles/postcss/modules/global.css
+++ b/public/styles/postcss/modules/global.css
@@ -2,6 +2,7 @@ a {
   text-decoration: none;
 }
 
+$card-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 $white: #C9CBD6;
 $base: #333439;
 $black: #04050A;
