--- a/public/styles/postcss/modules/menu.css
+++ b/public/styles/postcss/modules/menu.css
@@ -1,24 +1,17 @@
-.dashboard {
-  font-family: $roboto-font;
-  width: 100%;
-  padding-right: 0;
-  padding-left: 0;
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 250px 1fr;
-  &__menu {
+  .menu {
+    width: 250px;
+    position: fixed;
     background-color: $base;
     display: grid;
     grid-row-start: 1;
     grid-row-end: -1;
-    height: 100%;
+    height: 100vh;
     grid-template-rows: repeat(6, 75px) 1fr;
     align-item: center;
     justify-item: center;
     &>a {
       display: block;
       width: 100%;
-      min-height: 100vh;
       height: 100%;
       color: $white;
       text-align: center;
@@ -27,4 +20,3 @@
       border-bottom: 2px solid #2E3334;
     }
   }
-}
