--- a/public/styles/postcss/modules/overview.css
+++ b/public/styles/postcss/modules/overview.css
@@ -1,25 +1,10 @@
 .overview {
-    grid-area: content;
-    grid-column-start: 2;
-    grid-column-end: -1;
-    display: grid;
-    grid-gap: 15px;
-    grid-template-areas:
-    "content1 content2 content3 content3"
-    "content4 content4 content5 content5";
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: minmax(200px, 500px);
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: minmax(100px, 250px);
+  grid-gap: 15px;
 
-    &__it1 > #dcit1 {
-      height: 100% !important;
-    }
-    &__it2 > #dcit2 {
-      height: 100% !important;
-    }
-    &__it3 {
-      grid-column: span 2;
-      & > #dcit3 {
-        height: 100% !important;
-      }
-    }
+  &__it1, &__it2, &__it3 {
+    box-shadow: $card-shadow;
   }
+}
