--- a/views/priceList/price_list.handlebars
+++ b/views/priceList/price_list.handlebars
@@ -100,4 +100,4 @@
 
 {{!-- Scripts start here --}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-  <script src="/js/dist/script2.js"></script>
+  <script src="/js/dist/priceList.js"></script>
